--- a/homepage.html
+++ b/homepage.html
@@ -1,82 +1,161 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main-page-css/homepage.scss">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main-page-css/home-page.css" />
     <script src="js/script.js"></script>
-    <script src="https://kit.fontawesome.com/2b1c45aad2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2b1c45aad2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>LawHub - The best way to put yourself into Law carrer</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header-left-side">
-
-        </div>
-        <div class="header-right-side">
-
-        </div>
+      <div class="header-left-side"></div>
+      <div class="header-right-side"></div>
     </header>
     <nav>
-        <div class="nav-left-side">
-            <h1>Law<span>Hub</span></h1>
-        </div>
-        <div class="nav-right-side">
-            <ul>
-                <li>About</li>
-                <li>Register</li>
-                <li>Sign in</li>
-            </ul>
-        </div>
+      <div class="nav-left-side">
+        <h1>Law<span>Hub</span></h1>
+      </div>
+      <div class="nav-right-side">
+        <ul>
+          <li>About</li>
+          <li>Register</li>
+          <li>Sign in</li>
+        </ul>
+      </div>
     </nav>
     <main>
-        <section class="flex-container">
-            <section class="heading-container">
-                <img src="#" alt=""/>
-                <div class="heading-content">
-                    <div class="heading">
-
-                    </div>
-                    <div class="button">
-
-                    </div>
-                </div>
-            </section>
-            <article>
-                <div class="heading">
-
-                </div>
-                <div class="heading">
-                    
-                </div>
-                <div class="heading">
-                    
-                </div>
-            </article>
-            <article>
-                <div class="jobs">
-
-                </div>
-                <div class="jobs">
-
-                </div>
-                <div class="jobs">
-
-                </div>
-            </article>
-            <article class="wage-avg">
-                <div class="content">
-
-                </div>
-                <div class="button">
-
-                </div>
-            </article>
+      <section class="flex-container">
+        <section class="heading-container">
+          <div class="heading-content">
+            <div class="heading">
+              <h2>Oportunities for you, Lawyer!</h2>
+            </div>
+            <div class="button">
+              <input type="button" value="See all jobs" />
+            </div>
+            <div class="heading-text">
+              <p>
+                Have access to many Lawyer oportunities. Find the right spot for
+                you to fit!
+              </p>
+            </div>
+          </div>
         </section>
+        <article>
+          <div class="heading">
+            <i class="fa-solid fa-circle-check"></i>
+            <h3>Lawyers only!</h3>
+            <p>We're a 100% commited to your <mark>role recruitment</mark></p>
+          </div>
+          <div class="heading">
+            <i class="fa-solid fa-circle-check"></i>
+            <h3>All free!</h3>
+            <p>
+              You just need to enroll and fill your resumé
+              <mark>, free of charge,</mark> to go after any compatible role.
+            </p>
+          </div>
+          <div class="heading">
+            <i class="fa-solid fa-circle-check"></i>
+            <h3>Matching Alerts</h3>
+            <p>
+              Our matching system allows you <mark>to be notified</mark> only if
+              there's any new role compatibility
+            </p>
+          </div>
+        </article>
+        <article class="flex-container">
+          <div class="job">
+            <div class="header-image">
+              <i class="fa-solid fa-building"></i>
+            </div>
+            <h2>Tax Lawyer</h2>
+            <div class="enterprise-info">
+              <ul class="grid-container">
+                <li>Shiloh MedCare</li>
+                <li>São Paulo, SP - Brazil</li>
+                <li>Mid size company</li>
+                <li>Mid level</li>
+              </ul>
+            </div>
+            <div class="role-pill">
+              <ul class="grid-container">
+                <li>Microsoft Excel</li>
+                <li>Microsoft Word</li>
+                <li>Bachelor Degree</li>
+              </ul>
+            </div>
+          </div>
+          <div class="job">
+            <div class="header-image">
+              <i class="fa-solid fa-building"></i>
+            </div>
+            <h2>Tax Lawyer</h2>
+            <div class="enterprise-info">
+              <ul class="grid-container">
+                <li>Shiloh MedCare</li>
+                <li>São Paulo, SP - Brazil</li>
+                <li>Mid size company</li>
+                <li>Mid level</li>
+              </ul>
+            </div>
+            <div class="role-pill">
+              <ul class="grid-container">
+                <li>Microsoft Excel</li>
+                <li>Microsoft Word</li>
+                <li>Bachelor Degree</li>
+              </ul>
+            </div>
+          </div>
+          <div class="job">
+            <div class="header-image">
+              <i class="fa-solid fa-building"></i>
+            </div>
+            <h2>Tax Lawyer</h2>
+            <div class="enterprise-info">
+              <ul class="grid-container">
+                <li>Shiloh MedCare</li>
+                <li>São Paulo, SP - Brazil</li>
+                <li>Mid size company</li>
+                <li>Mid level</li>
+              </ul>
+            </div>
+            <div class="role-pill">
+              <ul class="grid-container">
+                <li>Microsoft Excel</li>
+                <li>Microsoft Word</li>
+                <li>Bachelor Degree</li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="wage-avg">
+          <div class="image">
+            <img src="assets/img/undraw_vault_re_s4my.svg" alt="Vault image" />
+          </div>
+          <div class="text">
+            <div class="heading">
+              <h2>Find the average income for each Law area</h2>
+            </div>
+            <div class="content">
+              <p>
+                Would you like to know what is the average income for any kind
+                of Lawyer? We, from Law<span>Hub</span>, are here to expose this
+                informations right into your screen. Check this up!
+              </p>
+            </div>
+          </div>
+          <div class="button">
+            <input type="button" value="See Law Income" />
+          </div>
+        </article>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+  </body>
 </html>
