ads headings done

--- a/homepage.html
+++ b/homepage.html
@@ -47,27 +47,33 @@
             </div>
           </div>
         </section>
-        <article>
+        <article class="heading-ads">
           <div class="heading">
-            <i class="fa-solid fa-circle-check"></i>
-            <h3>Lawyers only!</h3>
-            <p>We're a 100% commited to your <mark>role recruitment</mark></p>
+              <div class="title">
+                <i class="fa-solid fa-circle-check"></i>
+                <h3>Lawyers only!</h3>
+              </div>
+              <p>We're a 100% commited to your <mark>role recruitment</mark></p>
           </div>
           <div class="heading">
-            <i class="fa-solid fa-circle-check"></i>
-            <h3>All free!</h3>
-            <p>
-              You just need to enroll and fill your resumé
-              <mark>, free of charge,</mark> to go after any compatible role.
-            </p>
+              <div class="title">
+                <i class="fa-solid fa-circle-check"></i>
+                <h3>All free!</h3>
+              </div>
+              <p>
+                You just need to enroll and fill your resumé
+                <mark>, free of charge,</mark> to go after any compatible role.
+              </p>
           </div>
           <div class="heading">
-            <i class="fa-solid fa-circle-check"></i>
-            <h3>Matching Alerts</h3>
-            <p>
-              Our matching system allows you <mark>to be notified</mark> only if
-              there's any new role compatibility
-            </p>
+              <div class="title">
+                <i class="fa-solid fa-circle-check"></i>
+                <h3>Matching Alerts</h3>
+              </div>
+              <p>
+                Our matching system allows you <mark>to be notified</mark> only if
+                there's any new role compatibility
+              </p>
           </div>
         </article>
         <article class="flex-container">
