latest jobs section done

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </p>
           </div>
         </article>
-        <article class="flex-container">
+        <article class="card-flex-container">
           <div class="job">
             <div class="header-image">
               <i class="fa-solid fa-building"></i>
