--- a/index.html
+++ b/index.html
@@ -145,23 +145,28 @@
           <div class="image">
             <img src="assets/img/undraw_vault_re_s4my.svg" alt="Vault image" />
           </div>
-          <div class="text">
-            <div class="heading">
-              <h2>Find the average income for each Law area</h2>
+          <div class="right-block">
+            <div class="text">
+              <div class="heading">
+                <h2>Find the average income for each Law area</h2>
+              </div>
+              <div class="content">
+                <p>
+                  Would you like to know what is the average income for any kind
+                  of Lawyer? We, from Law<span>Hub</span>, are here to expose this
+                  informations right into your screen. Check this up!
+                </p>
+              </div>
             </div>
-            <div class="content">
-              <p>
-                Would you like to know what is the average income for any kind
-                of Lawyer? We, from Law<span>Hub</span>, are here to expose this
-                informations right into your screen. Check this up!
-              </p>
+            <div class="button">
+              <input type="button" value="See Law Income" />
             </div>
-          </div>
-          <div class="button">
-            <input type="button" value="See Law Income" />
           </div>
         </article>
       </section>
     </main>
+    <footer>
+      <p>All rights reserved &copy;</p>
+    </footer>
   </body>
 </html>
